--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
-    "kuromoji": "^0.1.2",
+    "tiny-segmenter": "^0.2.0",
     "vue": "^2.6.10",
     "vuetify": "^2.1.0"
   },
